// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PorscheDesignSystemProvider > should render components wrapped with nested provider and prefix 1`] = `
<div>
  <my-prefix-p-button>
    Some Button
  </my-prefix-p-button>
  <another-prefix-p-button>
    Some Button
  </another-prefix-p-button>
  <p-button>
    Some Button
  </p-button>
</div>
`;

exports[`PorscheDesignSystemProvider > should render prefixed components 1`] = `
<div>
  <my-prefix-p-button>
    Some Button
  </my-prefix-p-button>
</div>
`;

exports[`PorscheDesignSystemProvider > should render unprefixed components 1`] = `
<div>
  <p-button>
    Some Button
  </p-button>
</div>
`;
